<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dew.aihua.report.ErrorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/errorActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextAppearance="@style/Toolbar.Title">


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/errorSorryView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sorry_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messageWhatHappenedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_happened_headline"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/errorMessageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_labels"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/errorDetailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/error_details_headline"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/errorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/errorYourComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/your_comment"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/errorCommentBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />

            <Button
                android:id="@+id/errorReportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_report_button_text" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
