<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_bkg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/bluegray">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:padding="15dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/item_more"
        android:layout_toEndOf="@id/item_icon"
        android:ellipsize="end"
        android:padding="6dp"
        android:text="@string/xxx_xx"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:layout_toEndOf="@id/item_icon"
        android:padding="6dp"
        android:singleLine="true"
        android:text="@string/size_100_00mb"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/item_more"
        android:layout_toEndOf="@id/item_size"
        android:padding="6dp"
        android:singleLine="true"
        android:text="0%"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/item_more"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/ic_menu_more" />

</RelativeLayout>


