<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_bkg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/bluegray">

    <RelativeLayout
        android:id="@+id/item_title_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:singleLine="true"
            android:text="0%"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/item_more"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu_more" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/item_title_line"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:padding="10dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_icon"
        android:ellipsize="end"
        android:padding="6dp"
        android:singleLine="true"
        android:text="@string/xxx_xx"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_name"
        android:padding="6dp"
        android:singleLine="true"
        android:text="@string/size_100_00mb"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>
    

