<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlist_control"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/playlist_ctrl_play_bg_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/playlist_ctrl_height"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="?attr/audio"
            android:drawableLeft="?attr/audio"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/controls_background_title"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/channel_rss_title_size" />
    </LinearLayout>

    <View
        android:id="@+id/anchorLeft"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/playlist_ctrl_seperator_margin"
        android:layout_marginBottom="@dimen/playlist_ctrl_seperator_margin"
        android:background="?attr/colorAccent"
        android:clickable="false" />

    <LinearLayout
        android:id="@+id/playlist_ctrl_play_all_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/play_all"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/channel_rss_title_size" />
    </LinearLayout>

    <View
        android:id="@+id/anchorRight"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/playlist_ctrl_seperator_margin"
        android:layout_marginBottom="@dimen/playlist_ctrl_seperator_margin"
        android:background="?attr/colorAccent"
        android:clickable="false" />

    <LinearLayout
        android:id="@+id/playlist_ctrl_play_popup_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="?attr/popup"
            android:drawableLeft="?attr/popup"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/controls_popup_title"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/channel_rss_title_size" />
    </LinearLayout>
</LinearLayout>
